# daisy-modulation-pedal

./: .gitignore  CLAUDE.md  Makefile  README.md  USER_MANUAL.md  cliff.toml  encoder  kicadplan
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
desktop/vst/: CMakeLists.txt  README.md
desktop/vst/include/: daisy_seed.h  submode_info.h
desktop/vst/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  submode_info.cpp
docs/: architecture.md  claude-md.md  dsp-blocks.md  file-changes.md  hardware-assembly.md  implementation-plan.md  modes.md  parameters.md  stereo-input-plan.md
docs/superpowers/plans/: 2026-03-24-esp32-display-coprocessor.md  2026-04-03-code-review-fixes.md
docs/superpowers/specs/: 2026-03-24-esp32-display-coprocessor-design.md
manual/: Mobius_UserManual_REVF-1.html  Mobius_UserManual_REVF-10.html  Mobius_UserManual_REVF-11.html  Mobius_UserManual_REVF-12.html  Mobius_UserManual_REVF-13.html  Mobius_UserManual_REVF-14.html  Mobius_UserManual_REVF-15.html  Mobius_UserManual_REVF-16.html  Mobius_UserManual_REVF-17.html  Mobius_UserManual_REVF-18.html  Mobius_UserManual_REVF-19.html  Mobius_UserManual_REVF-2.html  Mobius_UserManual_REVF-20.html  Mobius_UserManual_REVF-21.html  Mobius_UserManual_REVF-22.html  Mobius_UserManual_REVF-23.html  Mobius_UserManual_REVF-24.html  Mobius_UserManual_REVF-25.html  Mobius_UserManual_REVF-26.html  Mobius_UserManual_REVF-27.html  Mobius_UserManual_REVF-3.html  Mobius_UserManual_REVF-4.html  Mobius_UserManual_REVF-5.html  Mobius_UserManual_REVF-6.html  Mobius_UserManual_REVF-7.html  Mobius_UserManual_REVF-8.html  Mobius_UserManual_REVF-9.html  Mobius_UserManual_REVF.html  Mobius_UserManual_REVF_ind.html
src/: main.cpp
src/audio/: audio_engine.cpp  audio_engine.h  stereo_frame.h
src/config/: constants.h  delay_mode_id.h  mod_mode_id.h  pin_map.h
src/display/: display_layout.h  display_manager.cpp  display_manager.h
src/dsp/: bbd_emulator.h  delay_line_sdram.cpp  lfo.cpp  lfo.h  pattern_sequencer.h
src/hardware/: controls.cpp  controls.h
src/midi/: midi_handler.cpp  midi_handler.h
src/modes/: auto_swell_mode.cpp  auto_swell_mode.h  chorus_mode.cpp  chorus_mode.h  dbucket_delay.cpp  dbucket_delay.h  delay_mode.h  destroyer_mode.cpp  destroyer_mode.h  digital_delay.cpp  digital_delay.h  dual_delay.cpp  dual_delay.h  duck_delay.cpp  duck_delay.h  filter_delay.cpp  filter_delay.h  filter_mode.cpp  filter_mode.h  flanger_mode.cpp  flanger_mode.h  formant_mode.cpp  formant_mode.h  lofi_delay.cpp  lofi_delay.h  mod_mode.h  mode_registry.cpp  mode_registry.h  pattern_delay.cpp  pattern_delay.h  pattern_trem_mode.cpp  pattern_trem_mode.h  phaser_mode.cpp  phaser_mode.h  quadrature_mode.cpp  quadrature_mode.h  rotary_mode.cpp  rotary_mode.h  stub_modes.h  swell_delay.cpp  (+9 more)
src/params/: param_id.h  param_map.cpp  param_map.h  param_set.cpp  param_set.h
src/presets/: preset_manager.cpp  preset_manager.h
src/tempo/: tempo_sync.cpp
